--- a/index.html
+++ b/index.html
@@ -20,30 +20,30 @@
 <article>
   <section>
     <pre class="example">
-(defun &lt;3
-"Emacs Love")
+(defun &lt;3 ()
+  "Emacs Love")
 </pre>
 
 <p>
 Aliquam erat volutpat.  Nunc eleifend leo vitae magna.  In id erat non orci commodo lobortis.  Proin neque massa, cursus ut, gravida ut, lobortis eget, lacus.  Sed diam.  Praesent fermentum tempor tellus.  Nullam tempus.  Mauris ac felis vel velit tristique imperdiet.  Donec at pede.  Etiam vel neque nec dui dignissim bibendum.  Vivamus id enim.  Phasellus neque orci, porta a, aliquet quis, semper a, massa.  Phasellus purus.  Pellentesque tristique imperdiet tortor.  Nam euismod tellus id erat.
 </p>
 
-<div id="outline-container-orgeb7799e" class="outline-2">
-<h2 id="orgeb7799e">Projects</h2>
-<div class="outline-text-2" id="text-orgeb7799e">
+<div id="outline-container-org01269a5" class="outline-2">
+<h2 id="org01269a5">Projects</h2>
+<div class="outline-text-2" id="text-org01269a5">
 </div>
-<div id="outline-container-orgd615533" class="outline-4">
-<h4 id="orgd615533"><a href="http://emacs.love/weblorg">Weblorg</a></h4>
-<div class="outline-text-4" id="text-orgd615533">
+<div id="outline-container-org96de273" class="outline-4">
+<h4 id="org96de273"><a href="http://emacs.love/weblorg">Weblorg</a></h4>
+<div class="outline-text-4" id="text-org96de273">
 <p>
 A static HTML generator for Emacs &amp; Org-Mode
 </p>
 </div>
 </div>
 
-<div id="outline-container-org930f3bf" class="outline-4">
-<h4 id="org930f3bf"><a href="http://emacs.love/tales">Emacs Tales</a></h4>
-<div class="outline-text-4" id="text-org930f3bf">
+<div id="outline-container-org05f6784" class="outline-4">
+<h4 id="org05f6784"><a href="http://emacs.love/tales">Emacs Tales</a></h4>
+<div class="outline-text-4" id="text-org05f6784">
 <p>
 A collection of unexpected stories involving emacs
 </p>
