update text on home page

--- a/index.html
+++ b/index.html
@@ -19,31 +19,30 @@
       
 <article>
   <section>
-    <pre class="example">
-(defun &lt;3 ()
-  "Emacs Love")
+    <div class="org-src-container">
+<pre class="src src-emacs-lisp">(<span style="font-weight: bold;">defun</span> <span style="font-weight: bold;">&lt;3</span> ()
+  <span style="font-style: italic;">"Emacs Love</span>
+
+<span style="font-style: italic;">A collective of software for Emacs and Org-Mode."</span>)
 </pre>
-
-<p>
-Aliquam erat volutpat.  Nunc eleifend leo vitae magna.  In id erat non orci commodo lobortis.  Proin neque massa, cursus ut, gravida ut, lobortis eget, lacus.  Sed diam.  Praesent fermentum tempor tellus.  Nullam tempus.  Mauris ac felis vel velit tristique imperdiet.  Donec at pede.  Etiam vel neque nec dui dignissim bibendum.  Vivamus id enim.  Phasellus neque orci, porta a, aliquet quis, semper a, massa.  Phasellus purus.  Pellentesque tristique imperdiet tortor.  Nam euismod tellus id erat.
-</p>
-
-<div id="outline-container-org01269a5" class="outline-2">
-<h2 id="org01269a5">Projects</h2>
-<div class="outline-text-2" id="text-org01269a5">
 </div>
-<div id="outline-container-org96de273" class="outline-4">
-<h4 id="org96de273"><a href="http://emacs.love/weblorg">Weblorg</a></h4>
-<div class="outline-text-4" id="text-org96de273">
+
+<div class="outline-2">
+<h2 id="projects">Projects</h2>
+<div class="outline-text-2" id="text-projects">
+</div>
+<div class="outline-4">
+<h4 id="http-emacs-love-weblorg-weblorg"><a href="http://emacs.love/weblorg">Weblorg</a></h4>
+<div class="outline-text-4">
 <p>
 A static HTML generator for Emacs &amp; Org-Mode
 </p>
 </div>
 </div>
 
-<div id="outline-container-org05f6784" class="outline-4">
-<h4 id="org05f6784"><a href="http://emacs.love/tales">Emacs Tales</a></h4>
-<div class="outline-text-4" id="text-org05f6784">
+<div class="outline-4">
+<h4 id="http-emacs-love-tales-emacs-tales"><a href="http://emacs.love/tales">Emacs Tales</a></h4>
+<div class="outline-text-4">
 <p>
 A collection of unexpected stories involving emacs
 </p>
