Add templatel to project list

--- a/index.html
+++ b/index.html
@@ -27,11 +27,20 @@
 </pre>
 </div>
 
-<div class="outline-2">
+<div id="outline-container-projects" class="outline-2">
 <h2 id="projects">Projects</h2>
 <div class="outline-text-2" id="text-projects">
 </div>
-<div class="outline-4">
+<div id="outline-container-http-emacs-love-tales-emacs-tales" class="outline-4">
+<h4 id="http-emacs-love-tales-emacs-tales"><a href="http://emacs.love/tales">Emacs Tales</a></h4>
+<div class="outline-text-4">
+<p>
+A collection of unexpected stories involving emacs
+</p>
+</div>
+</div>
+
+<div id="outline-container-http-emacs-love-weblorg-weblorg" class="outline-4">
 <h4 id="http-emacs-love-weblorg-weblorg"><a href="http://emacs.love/weblorg">Weblorg</a></h4>
 <div class="outline-text-4">
 <p>
@@ -40,11 +49,11 @@ A static HTML generator for Emacs &amp; Org-Mode
 </div>
 </div>
 
-<div class="outline-4">
-<h4 id="http-emacs-love-tales-emacs-tales"><a href="http://emacs.love/tales">Emacs Tales</a></h4>
+<div id="outline-container-http-emacs-love-templatel-templatel" class="outline-4">
+<h4 id="http-emacs-love-templatel-templatel"><a href="http://emacs.love/templatel">templatel</a></h4>
 <div class="outline-text-4">
 <p>
-A collection of unexpected stories involving emacs
+A templating language for Emacs Lisp
 </p>
 </div>
 </div>
